--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
 <script src="bower_components/backbone/backbone.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- <script src="app.js"></script> -->
-<script src="views/search-view.js"></script>
-<script src="views/map-view.js"></script>
+<script src="app/views/search-view.js"></script>
+<script src="app/views/map-view.js"></script>
 
 </head>
 
