--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-  <title>Movies Filmed in San Francisco</title>
-
-<script src="bower_components/backbone/backbone.js"></script>
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<!-- <script src="app.js"></script> -->
-<script src="app/views/search-view.js"></script>
-<script src="app/views/map-view.js"></script>
-
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+	<title>Movies Filmed in San Francisco</title>
 </head>
 
 <body>
 
 <p>HEY YOU GUYS</p>
-<p>GET ME A FULL FILE</p>
-<script type='template' id='map-template'>
-  <div id="map"></div>
-</script>
-<div id='container'></div>
+<div>
+Put the jq auto complete in here
+</div>
+<div id="map" style="height: 180px;"></div>
+	<script>
+		
+		var map = L.map('map').setView([51.505, -0.09], 13);
+		
+		L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		    maxZoom: 18
+		}).addTo(map);
 
+	</script>
 </body>
 </html>
