--- a/app/index.html
+++ b/app/index.html
@@ -9,36 +9,37 @@
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
 	<script src="/../node_modules/leaflet-search/src/leaflet-search.js"></script>
 	<script>
-  $(function() {
-  	var availableTags = server.fetchData;
-    // var availableTags = [
-    //   "ActionScript",
-    //   "AppleScript",
-    //   "Asp",
-    //   "BASIC",
-    //   "C",
-    //   "C++",
-    //   "Clojure",
-    //   "COBOL",
-    //   "ColdFusion",
-    //   "Erlang",
-    //   "Fortran",
-    //   "Groovy",
-    //   "Haskell",
-    //   "Java",
-    //   "JavaScript",
-    //   "Lisp",
-    //   "Perl",
-    //   "PHP",
-    //   "Python",
-    //   "Ruby",
-    //   "Scala",
-    //   "Scheme"
-    // ];
-    $( "#tags" ).autocomplete({
-      source: availableTags
-    });
-  });
+  // $(function() {
+  // 	// var availableTags = server.fetchData;
+  //   var availableTags = [
+  //     "ActionScript",
+  //     "AppleScript",
+  //     "Asp",
+  //     "BASIC",
+  //     "C",
+  //     "C++",
+  //     "Clojure",
+  //     "COBOL",
+  //     "ColdFusion",
+  //     "Erlang",
+  //     "Fortran",
+  //     "Groovy",
+  //     "Haskell",
+  //     "Java",
+  //     "JavaScript",
+  //     "Lisp",
+  //     "Perl",
+  //     "PHP",
+  //     "Python",
+  //     "Ruby",
+  //     "Scala",
+  //     "Scheme"
+  //   ];
+  //   $( "#tags" ).autocomplete({
+  //     source: availableTags
+  //   });
+  // });
+  // 
   </script>
 	<title>Movies Filmed in San Francisco</title>
 </head>
@@ -59,25 +60,18 @@
 		
 		var markersLayer = new L.LayerGroup();	//layer contain searched elements
 
-		var controlSearch = new L.Control.Search({layer: markersLayer, initial: false, position:'topright'});
+		var controlSearch = new L.Control.Search({layer: markersLayer, initial: false
+			//, position:'topright'
+		});
 
 		map.addLayer(new L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png'));
 
 		map.addControl( controlSearch );
 
-		// map.addControl( new L.Control.Search({layer: searchLayer}) );
-
-		// L.map('map', { searchControl: {layer: searchLayer} });
-
 		/*
-		var map = new L.Map('map', {zoom: 9, center: new L.latLng(data[0].loc) });	//set center from first location
-
-		map.addLayer(new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'));	//base layer
-
 		var markersLayer = new L.LayerGroup();	//layer contain searched elements
 		map.addLayer(markersLayer);
 		*/
-
 
 	</script>
 </body>
